<resources>
    <string name="app_name">ResearchCenter</string>
    <string name="login">Sign In</string>
    <string name="register">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_subtitle">Sign in to your account</string>
    <string name="create_account_subtitle">Fill in your details to get started</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Sign In</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>
</resources>